--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -6,9 +6,7 @@ body {
   margin-top: 30px; }
 
 h1 {
-  font-size: 36px;
-  margin-top: -6px;
-  margin-bottom: 10px; }
+  font-size: 36px; }
 
 a:hover {
   text-decoration: none; }
